2015-12-17  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/dlr-mysql.conf: add comment block describing an advanced
      configuraiton for MySQL with scheduled events for DLR table clean-up.
      
2015-12-17  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/dlr-cassandra.conf: example for Cassandra.
    * doc/userguide/userguide.xml: documentation for Cassandra support.
    * gw/dlr_cass.c: adding DLR handling via Cassandra.
    * gw/dlr_p.h: adding dlr_init_cass() prototype.
    * gw/dlr.c: add 'spool = cassandra'.
    * gwlib/cfg.def: adding 'group = cassandra-connection' context.
    * gwlib/dbpool_cass.c: adding Cassandra DBPool support via DataStax C/C++
      Cassandra driver library.
    * gwlib/dbpool.[ch]: include Cassandra handling.
    * test/test_dbpool.c: add Cassandra testing capabilities.
    * configure[.in]: adding --with-cassandra and --with-cassandra-dir
    * gw-config.h.in: define HAVE_CASS
    This patchset adds support for the Apache Cassandra 2.1, 2.2 and 3.0
    database engine. Initially DLRs can be stored in the database.
     
2015-12-14  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/store-redis.conf: add documentation for the 'hash' config
      directive in the 'group = store-db' context.
    * gw/bb_store_redis.c: use redis with binds list and implement an 'hash'
      mode that allows for readable object in the redis store, rather then the
      string blobs as sinle key/value pair.
    * gw/dlr_redis.c: use the binds list values.
    * gwlib/cfg.def: add 'hash' config directive to 'group = store-db' context.
    * gwlib/dbpool_redis.c: implement the usage of redisCommandArgv() with the
      binds values via the list.
    This patchset re-writes some parts of the redis support modules, mainly to
    support the more generic redisCommandArgv() API call that makes things
    more robust internally.

2015-11-16 Alexander Malysh <amalysh at kannel.org>